
================================================
|               Version 0.0.2                  |
================================================
 - Support to Cal3D format for character models,
 - Some animations added.
 - Gui is now avaible on graphical engine;
 - Colision detection more permissive;
 - Makefile to compile on window$ (Dev-C++);
 - MiniMap implementated;
 - Constant character & camera velocity;
 - Initial menu;
 - Loading screen;
 - Functional and VERY ugly map editor;
 - Some new objects and characters;
 - Map to map navigation;
 - New test maps;
 - Objects orientation possible;
 - Better Floor & Walls Representation;
 - Variable terrain height;
 - Object pass throught added;
 - Interactive Doors Added;
 -
 - Some bugs fixed; 

================================================
|               Version 0.0.1                  |
================================================
 - First Release of DccNiTghtmare;
 - View Frustum Culling;
 - Static LOD;
 - First Implementation of Colision Detection;
 - First Step to animation (body division);
 - The Character can "Walk" (erh, fly??);
 - The Camera can move; 