@@ -588,7 +588,7 @@ LanguageID=1033
 CharsetID=1252
 CompanyName=
 FileVersion=
-FileDescription=Developed using the Dev-C++ IDE
+FileDescription=
 InternalName=
 LegalCopyright=
 LegalTrademarks=
